Arquitectura con WCF

--- a/WebDocuments/Web.config
+++ b/WebDocuments/Web.config
@@ -89,4 +89,16 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
+  <system.serviceModel>
+    <bindings>
+      <basicHttpBinding>
+        <binding name="BasicHttpBinding_IUsuarioService" />
+      </basicHttpBinding>
+    </bindings>
+    <client>
+      <endpoint address="http://localhost:2017/UsuarioService.svc"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IUsuarioService"
+        contract="ServiceUsuario.IUsuarioService" name="BasicHttpBinding_IUsuarioService" />
+    </client>
+  </system.serviceModel>
 </configuration>
