--- a/eDocuments.Entities/eDocuments.Entities.csproj
+++ b/eDocuments.Entities/eDocuments.Entities.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{6801615B-3B1C-4528-9A60-2942FEBC4A8F}</ProjectGuid>
+    <ProjectGuid>{09A393A2-FE96-4645-B320-44472820BFA2}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>eDocuments.BusinessLogic</RootNamespace>
-    <AssemblyName>eDocuments.BusinessLogic</AssemblyName>
+    <RootNamespace>eDocuments.Entities</RootNamespace>
+    <AssemblyName>eDocuments.Entities</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -40,18 +40,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BLUsuario.cs" />
+    <Compile Include="Auditoria.cs" />
+    <Compile Include="BEUsuario.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\eDocuments.DataAccess\eDocuments.DataAccess.csproj">
-      <Project>{866AF378-C2F0-4E27-8A88-679A246DC6C3}</Project>
-      <Name>eDocuments.DataAccess</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\eDocuments.Entities\eDocuments.Entities.csproj">
-      <Project>{09a393a2-fe96-4645-b320-44472820bfa2}</Project>
-      <Name>eDocuments.Entities</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
