--- a/eDocuments.Service/eDocuments.Service.csproj
+++ b/eDocuments.Service/eDocuments.Service.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{6801615B-3B1C-4528-9A60-2942FEBC4A8F}</ProjectGuid>
+    <ProjectGuid>{EBE52088-07AB-4906-8C9E-23BB7F8694FF}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>eDocuments.BusinessLogic</RootNamespace>
-    <AssemblyName>eDocuments.BusinessLogic</AssemblyName>
+    <RootNamespace>eDocuments.Service</RootNamespace>
+    <AssemblyName>eDocuments.Service</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -32,6 +32,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -40,17 +41,21 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BLUsuario.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UsuarioService.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\eDocuments.DataAccess\eDocuments.DataAccess.csproj">
-      <Project>{866AF378-C2F0-4E27-8A88-679A246DC6C3}</Project>
-      <Name>eDocuments.DataAccess</Name>
+    <ProjectReference Include="..\eDocuments.BusinessLogic\eDocuments.BusinessLogic.csproj">
+      <Project>{6801615b-3b1c-4528-9a60-2942febc4a8f}</Project>
+      <Name>eDocuments.BusinessLogic</Name>
     </ProjectReference>
     <ProjectReference Include="..\eDocuments.Entities\eDocuments.Entities.csproj">
       <Project>{09a393a2-fe96-4645-b320-44472820bfa2}</Project>
       <Name>eDocuments.Entities</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\eDocuments.ServiceContracts\eDocuments.ServiceContracts.csproj">
+      <Project>{41d08a34-58ea-4947-87c3-60d484424f44}</Project>
+      <Name>eDocuments.ServiceContracts</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
