--- a/eDocuments.ServiceContracts/eDocuments.ServiceContracts.csproj
+++ b/eDocuments.ServiceContracts/eDocuments.ServiceContracts.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{6801615B-3B1C-4528-9A60-2942FEBC4A8F}</ProjectGuid>
+    <ProjectGuid>{41D08A34-58EA-4947-87C3-60D484424F44}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>eDocuments.BusinessLogic</RootNamespace>
-    <AssemblyName>eDocuments.BusinessLogic</AssemblyName>
+    <RootNamespace>eDocuments.ServiceContracts</RootNamespace>
+    <AssemblyName>eDocuments.ServiceContracts</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -32,6 +32,8 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -40,14 +42,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BLUsuario.cs" />
+    <Compile Include="IUsuarioService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\eDocuments.DataAccess\eDocuments.DataAccess.csproj">
-      <Project>{866AF378-C2F0-4E27-8A88-679A246DC6C3}</Project>
-      <Name>eDocuments.DataAccess</Name>
-    </ProjectReference>
     <ProjectReference Include="..\eDocuments.Entities\eDocuments.Entities.csproj">
       <Project>{09a393a2-fe96-4645-b320-44472820bfa2}</Project>
       <Name>eDocuments.Entities</Name>
