--- a/eDocuments.DataAccess/eDocuments.DataAccess.csproj
+++ b/eDocuments.DataAccess/eDocuments.DataAccess.csproj
@@ -68,6 +68,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DAArea.cs" />
+    <Compile Include="DACarpeta.cs" />
+    <Compile Include="DADocumento.cs" />
+    <Compile Include="DAPerfil.cs" />
+    <Compile Include="DAPerfilDocumento.cs" />
+    <Compile Include="DAPerfilUsuario.cs" />
+    <Compile Include="DAPropietario.cs" />
+    <Compile Include="DARol.cs" />
+    <Compile Include="DATipoDocumento.cs" />
     <Compile Include="DAUsuario.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
