--- a/eDocuments.Entities/eDocuments.Entities.csproj
+++ b/eDocuments.Entities/eDocuments.Entities.csproj
@@ -44,6 +44,7 @@
     <Compile Include="BEArea.cs" />
     <Compile Include="BECarpeta.cs" />
     <Compile Include="BEDocumento.cs" />
+    <Compile Include="BEEstados.cs" />
     <Compile Include="BEPerfil.cs" />
     <Compile Include="BEPerfilDocumento.cs" />
     <Compile Include="BEPerfilUsuario.cs" />
