Ajustes en el servicio

--- a/WebDocuments/Web.config
+++ b/WebDocuments/Web.config
@@ -10,7 +10,7 @@
   </configSections>
   
   <connectionStrings>
-    <add name="DefaultConnection" providerName="Npgsql" connectionString="Server=localhost;Port=5432;Database=DBDOC;User Id=postgres;Password=123456;Enlist=true;" />
+    <add name="DefaultConnection" providerName="Npgsql" connectionString="Server=localhost;Port=5432;Database=dbdemo;User Id=postgres;Password=1234;Enlist=true;" />
   </connectionStrings>
   
   <system.data>
@@ -102,12 +102,16 @@
     <bindings>
       <basicHttpBinding>
         <binding name="BasicHttpBinding_IUsuarioService" />
+        <binding name="BasicHttpBinding_IGeneralService" />
       </basicHttpBinding>
     </bindings>
     <client>
       <endpoint address="http://localhost:2017/UsuarioService.svc"
         binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IUsuarioService"
         contract="ServiceUsuario.IUsuarioService" name="BasicHttpBinding_IUsuarioService" />
+      <endpoint address="http://localhost:2017/GeneralService.svc"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IGeneralService"
+        contract="ServiceGeneral.IGeneralService" name="BasicHttpBinding_IGeneralService" />
     </client>
   </system.serviceModel>
 </configuration>
