--- a/eDocuments.Service/eDocuments.Service.csproj
+++ b/eDocuments.Service/eDocuments.Service.csproj
@@ -42,9 +42,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DocumentoService.cs" />
+    <Compile Include="GeneralService.cs" />
     <Compile Include="PerfilService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SeguimientoSolicitudService.cs" />
     <Compile Include="SolicitudService.cs" />
     <Compile Include="PropietarioService.cs" />
     <Compile Include="UsuarioService.cs" />
