--- a/eDocuments.ServiceHost/Web.config
+++ b/eDocuments.ServiceHost/Web.config
@@ -1,6 +1,17 @@
 <?xml version="1.0"?>
 <configuration>
 
+  <connectionStrings>
+    <add name="DefaultConnection" providerName="Npgsql" connectionString="Server=localhost;Port=5432;Database=dbdemo;User Id=postgres;Password=1234;Enlist=true;" />
+  </connectionStrings>
+
+  <system.data>
+    <DbProviderFactories>
+      <remove invariant="Npgsql" />
+      <add name="Npgsql Data Provider" invariant="Npgsql" support="FF" description=".Net Framework Data Provider for Postgresql Server" type="Npgsql.NpgsqlFactory, Npgsql, Version=3.0.7.0, Culture=neutral, PublicKeyToken=5d8b90d52f46fda7" />
+    </DbProviderFactories>
+  </system.data>
+  
   <appSettings>
     <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true"/>
   </appSettings>
