--- a/eDocuments.ServiceHost/eDocuments.ServiceHost.csproj
+++ b/eDocuments.ServiceHost/eDocuments.ServiceHost.csproj
@@ -89,6 +89,10 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="DocumentoService.svc" />
+    <Content Include="GeneralService.svc" />
+    <Content Include="PerfilService.svc" />
+    <Content Include="PropietarioService.svc" />
     <Content Include="UsuarioService.svc" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
