Ajustes de servicios y llamadas desde los controllers

--- a/WebDocuments/Web.config
+++ b/WebDocuments/Web.config
@@ -103,6 +103,10 @@
       <basicHttpBinding>
         <binding name="BasicHttpBinding_IUsuarioService" />
         <binding name="BasicHttpBinding_IGeneralService" />
+        <binding name="BasicHttpBinding_IDocumentoService" />
+        <binding name="BasicHttpBinding_IPerfilService" />
+        <binding name="BasicHttpBinding_IPropietarioService" />
+        <binding name="BasicHttpBinding_ISolicitudService" />
       </basicHttpBinding>
     </bindings>
     <client>
@@ -112,6 +116,18 @@
       <endpoint address="http://localhost:2017/GeneralService.svc"
         binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IGeneralService"
         contract="ServiceGeneral.IGeneralService" name="BasicHttpBinding_IGeneralService" />
+      <endpoint address="http://localhost:2017/DocumentoService.svc"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IDocumentoService"
+        contract="ServiceDocumento.IDocumentoService" name="BasicHttpBinding_IDocumentoService" />
+      <endpoint address="http://localhost:2017/PerfilService.svc" binding="basicHttpBinding"
+        bindingConfiguration="BasicHttpBinding_IPerfilService" contract="ServicePerfil.IPerfilService"
+        name="BasicHttpBinding_IPerfilService" />
+      <endpoint address="http://localhost:2017/PropietarioService.svc"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IPropietarioService"
+        contract="ServicePropietario.IPropietarioService" name="BasicHttpBinding_IPropietarioService" />
+      <endpoint address="http://localhost:2017/SolicitudService.svc"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ISolicitudService"
+        contract="ServiceSolicitud.ISolicitudService" name="BasicHttpBinding_ISolicitudService" />
     </client>
   </system.serviceModel>
 </configuration>
