--- a/eDocuments.ServiceHost/Web.config
+++ b/eDocuments.ServiceHost/Web.config
@@ -2,7 +2,7 @@
 <configuration>
 
   <connectionStrings>
-    <add name="DefaultConnection" providerName="Npgsql" connectionString="Server=localhost;Port=5432;Database=dbdemo;User Id=postgres;Password=1234;Enlist=true;" />
+    <add name="DefaultConnection" providerName="Npgsql" connectionString="Server=localhost;Port=5432;Database=dbdemo;User Id=postgres;Password=admin123;Enlist=true;" />
   </connectionStrings>
 
   <system.data>
